tests/src/frontend/typechecking/exhaustiveness/invalid/nested_non_subtype2.sk
base class B {
  children =
  | X()
  | Y()
  | Z()
}
base class L {
  children =
  | R()
  | G()
  | H()
}
fun test(): String {
  (Y(), G()) match {
  | (Z(), H()) -> "Fail\n"
  }
}
